# AFD-Thermonuklear

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  debug_tweet_reader.py  pyproject.toml  requirements.txt  test_get_tweet.py  test_pairing.py  test_tweet_reader.py  tweets.csv
schredder/: platformio.ini
schredder/src/: main.cpp
scripts/: autostart_startup_folder.bat  start_printer_fullscreen.ps1
src/: __init__.py  buffer.py  main.py  printer.py  tweet_reader.py  twitter.py
